# hiredis-happ

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .markdownlint.jsonc  .markdownlintignore  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  appveyor.yml  cmake_dev.sh
.agents/skills/: README.md
.agents/skills/ai-agent-maintenance/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/testing/: SKILL.md
.github/: copilot-instructions.md
.github/copilot/skills/: building.md  code-review.md  testing.md
.github/workflows/: main.yml
atframework/: Repository.cmake
ci/: do_ci.ps1  do_ci.sh  format.sh
doc/: ROADMAP.md  Redis全异步(HA)Driver设计稿.md  code-review-2026-05-26.md
doc/ai/: source-index.md
doc/res/2015/: Redis全异步(HA)Driver设计稿.vsdx
include/: hiredis_happ.h
include/detail/: config.h  crc16.h  happ_cluster.h  happ_cmd.h  happ_connection.h  happ_raw.h  hiredis_happ_config.h.in
project/cmake/: CompilerOption.cmake  FetchDependeny.cmake  FindPlatform.cmake  ProjectBuildOption.cmake  TargetOption.cmake
project/cmake/modules/: FindConfigurePackage.cmake  FindJemalloc.cmake  FindLibevent.cmake  FindLibhiredis.cmake  FindLibuv.cmake  RunCCode.cmake  RunCXXCode.cmake
sample/: CMakeLists.txt
sample/sample_cluster_cli/: CMakeLists.txt  main.cpp
sample/sample_raw_cli/: CMakeLists.txt  main.cpp
sample/sample_test/: CMakeLists.txt  main.cpp
src/: hiredis_happ.cpp
src/detail/: crc16.cpp  happ_cluster.cpp  happ_cmd.cpp  happ_connection.cpp  happ_raw.cpp
test/: CMakeLists.txt  test.happ-macro.cmake
test/case/: hiredis_happ_cluster_test.cpp  hiredis_happ_cmd_test.cpp  hiredis_happ_connection.cpp  hiredis_happ_connection_test.cpp  hiredis_happ_integration_test.cpp  hiredis_happ_raw_test.cpp  test_redis_reply_helper.h
test/redis/: redis-fixture.ps1  redis-fixture.sh
tools/: build_mingw.sh  build_msys.sh  build_unix.sh
