find_package(Libevent)
find_package(Libuv)

if(Libuv_FOUND OR Libevent_FOUND)

  get_filename_component(SAMPLE_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
  set(SAMPLE_NAME "hiredis-happ-${SAMPLE_NAME}")
  unset(SAMPLE_EXT_LIBS)

  include_directories(${CMAKE_CURRENT_LIST_DIR})

  aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SAMPLE_SRC_FILES)

  if(TARGET uv_a)
    add_compiler_define(HIREDIS_HAPP_ENABLE_LIBUV=1)
    list(APPEND SAMPLE_EXT_LIBS uv_a)
  elseif(TARGET uv)
    add_compiler_define(HIREDIS_HAPP_ENABLE_LIBUV=1)
    list(APPEND SAMPLE_EXT_LIBS uv)
  elseif(TARGET libuv)
    add_compiler_define(HIREDIS_HAPP_ENABLE_LIBUV=1)
    list(APPEND SAMPLE_EXT_LIBS libuv)
  elseif(TARGET libuv::libuv)
    add_compiler_define(HIREDIS_HAPP_ENABLE_LIBUV=1)
    list(APPEND SAMPLE_EXT_LIBS libuv::libuv)
  elseif(Libuv_FOUND OR LIBUV_FOUND)
    add_compiler_define(HIREDIS_HAPP_ENABLE_LIBUV=1)
    if(Libuv_INCLUDE_DIRS)
      include_directories(${Libuv_INCLUDE_DIRS})
    endif()
    if(Libuv_LIBRARIES)
      list(APPEND SAMPLE_EXT_LIBS ${Libuv_LIBRARIES})
    endif()
    if(WIN32)
      list(APPEND SAMPLE_EXT_LIBS psapi iphlpapi userenv ws2_32)
    endif()
  elseif(Libevent_FOUND)
    add_compiler_define(HIREDIS_HAPP_ENABLE_LIBEVENT=1)
    set(SAMPLE_EXT_LIBS ${Libevent_LIBRARIES})
    include_directories(${Libevent_INCLUDE_DIRS})
  endif()

  if(NOT MSVC)
    set(SAMPLE_EXT_LIBS ${SAMPLE_EXT_LIBS} pthread)
  endif()

  add_executable(${SAMPLE_NAME} ${SAMPLE_SRC_FILES})
  target_link_libraries(${SAMPLE_NAME} hiredis-happ ${SAMPLE_EXT_LIBS} ${COMPILER_OPTION_EXTERN_CXX_LIBS})

endif()
